syntax = "proto3";

package com.ximuyi.game.server.proto;

message ProEmpty{
}

message ProString{
    string value = 1;
}

message ProInteger{
    int32 value = 1;
}

message ProLong{
    int64 value = 1;
}
