syntax = "proto3";

package com.ximuyi.game.server.proto;

message LoginRequest {
    int64 userId = 1;
    string account = 2;
    string password = 3;
    int32 connectWay = 4;
}

message LoginResponse {

}

message LogoutRequest{

}

message LogoutResponse {

}


message HeartBeatRequest{

}

message HeartBeatResponse {
    int32 currentTime = 1;
}